fix: remove z-index

--- a/src/styles/warnings.less
+++ b/src/styles/warnings.less
@@ -6,7 +6,6 @@
     font-style: italic;
     font-size: 13px;
     color: rgb(123, 122, 120);
-    z-index: 1;
   }
 
   .sn-org-error {
@@ -16,6 +15,5 @@
     left: 50%;
     font-size: 1.2em;
     transform: translate(-50%, -50%);
-    z-index: 1;
-  }
+   }
 }
